メッセージ保存機能を追加。

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
       </section>
     </article>
-
+    <script src="js/lib/localforage.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
