--- a/calc.html
+++ b/calc.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/calc.css">
 	</head>
 	<body>
+		<h2>計算機</h2>
 		<article id="calculator">
 			<div id="error" class="hide">
 				<h2>次の点を確認してください</h2>
