計算の意味を入れてみた

--- a/calc.html
+++ b/calc.html
@@ -32,6 +32,7 @@
 				<input type="text" id="output">
 				<button type="button" id="calcButton">計算</button>
 			</form>
+			<p>+は足し算,-は引き算,*は掛け算,/は割り算,%は割り算した時のあまりをそれぞれ求めます</p>
 		</article>
 		<script src="js/calc.js"></script>
 	</body>
